--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GB Practice</title>
     <link rel="stylesheet" href="background.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+    <script src="background.js"></script>
 </head>
 <body>
-    <div id="gradient" />
+    <div id="gradient" /> 
+    <canvas id="canvas-basic"></canvas>
     hello GB
 </body>
 </html>
