--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GB Practice</title>
-    <link rel="stylesheet" href="background.css">
-    <script src="background.js"></script>
+    <title>GB_Practice1</title>
+    <link rel="stylesheet" href="main.css">
+    <script src="main.js"></script>
 </head>
 <body>
-    <div id="gradient" /> 
-    <canvas id="canvas-basic"></canvas>
-    hello GB
+    <canvas id="canvas-basic">asdfasdfa</canvas>
 </body>
 </html>
