--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <canvas id="canvas-basic">asdfasdfa</canvas>
+    <canvas id="canvas-basic">제발 좀 되라</canvas>
 </body>
 </html>
