--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <h1>연습하자</h1>
+    <h1>Practice Page</h1>
+    <ol>
+        <li>About Page</li>
+        <li>P1_background</li>
+        <li>P2_font</li>
+        <li>P3_button</li>
+        <li>P4_image</li>
+        <li>P5_animation</li>
+        <li>P6_function</li>
+    </ol>
 </body>
 </html>
