--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Practice Page</h1>
     <ol>
-        <li>About Page</li>
+        <li><a href="about.html">About Page</a></li>
         <li>P1_background</li>
         <li>P2_font</li>
         <li>P3_button</li>
