--- a/about.html
+++ b/about.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <p>이 페이지는 개인적으로 웹페이지 개발 연습을 위해 만들어진 페이지 입니다.<br>
-        볼품없는 페이지이지만 방문해주셔서 감사합니다.</p>
+        볼품없는 이 페이지를 방문해주셔서 감사합니다.</p>
 </body>
 </html>
