--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 </head>
 <body>
     <h1>Practice Page</h1>
-    <ol>
-        <li><a href="about.html">About Page</a></li>
-        <li>P1_background</li>
-        <li>P2_font</li>
-        <li>P3_button</li>
-        <li>P4_image</li>
-        <li>P5_animation</li>
-        <li>P6_function</li>
-    </ol>
+    <h3>
+        <div class="list">
+            <li><a href="about.html">About Page</a></li>
+            <li>P1_background</li>
+            <li>P2_font</li>
+            <li>P3_button</li>
+            <li>P4_image</li>
+            <li>P5_animation</li>
+            <li>P6_function</li>
+        </div>
+    </h3>
 </body>
 </html>
