--- a/index.html
+++ b/index.html
@@ -8,17 +8,22 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <h1>Practice Page</h1>
-    <h3>
-        <div class="list">
-            <li><a href="about.html">About Page</a></li>
-            <li>P1_background</li>
-            <li>P2_font</li>
-            <li>P3_button</li>
-            <li>P4_image</li>
-            <li>P5_animation</li>
-            <li>P6_function</li>
-        </div>
-    </h3>
+    <div class="head">
+        <span class="content">
+            <h1>Practice Page</h1>
+            <h3>
+                <div class="list">
+                <li><a href="about.html">About Page</a></li>
+                <li>P1_background</li>
+                <li>P2_font</li>
+                <li>P3_button</li>
+                <li>P4_image</li>
+                <li>P5_animation</li>
+                <li>P6_function</li>
+                </div>
+            </h3>
+        </span>
+        <span class="blank"></span>
+    </div>
 </body>
 </html>
