--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <span class="content">
             <h1>Practice Page</h1>
             <h3>
-                <li><a href="about.html">About Page</a></li>
-                <li>P1_background</li>
-                <li>P2_font</li>
-                <li>P3_button</li>
-                <li>P4_image</li>
-                <li>P5_animation</li>
-                <li>P6_function</li>
+                <p><a href="about.html">About Page</a></p>
+                <p>P1_background</p>
+                <p>P2_font</p>
+                <p>P3_button</p>
+                <p>P4_image</p>
+                <p>P5_animation</p>
+                <p>P6_function</p>
             </h3>
         </span>
         <span class="blank"></span>
