--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
         <span class="content">
             <h1>Practice Page</h1>
             <h3>
-                <p><a href="about.html">About Page</a></p>
-                <p>P1_background</p>
-                <p>P2_font</p>
-                <p>P3_button</p>
-                <p>P4_image</p>
-                <p>P5_animation</p>
-                <p>P6_function</p>
+                <div id="list">
+                    <p><a href="about.html">About Page</a></p>
+                    <p>P1_background</p>
+                    <p>P2_font</p>
+                    <p>P3_button</p>
+                    <p>P4_image</p>
+                    <p>P5_animation</p>
+                    <p>P6_function</p>
+                </div>
             </h3>
         </span>
         <span class="blank"></span>
