--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
             <h1>Practice Page</h1>
             <h3>
                 <div id="list">
-                    <p><a href="about.html">About Page</a></p>
-                    <p>P1_background</p>
-                    <p>P2_font</p>
-                    <p>P3_button</p>
-                    <p>P4_image</p>
-                    <p>P5_animation</p>
-                    <p>P6_function</p>
+                    <p>
+                    <a href="about.html">About Page</a><br>
+                    P1_background<br>
+                    P2_font<br>
+                    P3_button<br>
+                    P4_image<br>
+                    P5_animation<br>
+                    P6_function</p>
                 </div>
             </h3>
         </span>
