--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
             <h3>
                 <div id="list">
                     <p>
-                    <a href="about.html">1. About Page</a><br>
-                    2. P1_background<br>
-                    3. P2_font<br>
-                    4. P3_button<br>
-                    5. P4_image<br>
-                    6. P5_animation<br>
-                    7. P6_function</p>
+                    <a href="about.html">- About Page</a><br>
+                    - P1_background<br>
+                    - P2_font<br>
+                    - P3_button<br>
+                    - P4_image<br>
+                    - P5_animation<br>
+                    - P6_function</p>
                 </div>
             </h3>
         </span>
