--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <span class="content">
             <h1 style="font-weight: 800;">Practice Page</h1>
             <h3>
-                <div id="list">
+                <div class="list">
                     <p>
                     <a href="about.html">- About Page</a><br>
                     - P1_background<br>
