--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
             <h1 style="font-weight: 800;">Practice Page</h1>
             <h3>
                 <div class="list">
-                    <p>
                     <a href="about.html">- About Page</a><br>
                     - P1_background<br>
                     - P2_font<br>
                     - P3_button<br>
                     - P4_image<br>
                     - P5_animation<br>
-                    - P6_function</p>
+                    - P6_function
                 </div>
             </h3>
         </span>
