--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="head">
         <span class="content">
-            <h1 style="font-weight: 800;">Practice Page</h1>
+            <h1 style="font-weight: 800; margin-bottom: 5%;">Practice Page</h1>
             <h3>
                 <div class="list">
                     <a href="about.html">- About Page</a><br>
