--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <span class="content">
             <h1 style="font-weight: 800; margin-bottom: 15%;">Practice Page</h1>
             <h3>
-                <div class="list">
+                <div class="list" style="line-height: 10%;">
                     <a href="about.html">- About Page</a><br>
                     - P1_background<br>
                     - P2_font<br>
