--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="head">
         <span class="content">
             <h1 style="font-weight: 800; margin-bottom: 15%;">Practice Page</h1>
-            <h3>
-                <div class="list" style="line-height: 10%;">
+            <h3 style="line-height: 10%;">
+                <div class="list">
                     <a href="about.html">- About Page</a><br>
                     - P1_background<br>
                     - P2_font<br>
