--- a/about.html
+++ b/about.html
@@ -8,7 +8,13 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <p>이 페이지는 개인적으로 웹페이지 개발 연습을 위해 만들어진 페이지 입니다.<br>
-        볼품없는 이 페이지를 방문해주셔서 감사합니다.</p>
+    <div class="head">
+        <span class="content">
+            <p>이 페이지는 개인적으로 웹페이지 개발 연습을 위해 만들어진 페이지 입니다.<br>
+            볼품없는 이 페이지를 방문해주셔서 감사합니다.
+            </p>
+        </span>
+        <span class="blank"></span>
+    </div>
 </body>
 </html>
