--- a/about.html
+++ b/about.html
@@ -9,8 +9,13 @@
 </head>
 <body>
     <div class="head">
-            이 페이지는 개인적으로 웹페이지 개발 연습을 위해 만들어진 페이지 입니다.<br>
-            볼품없는 이 페이지를 방문해주셔서 감사합니다.
+        <span class="content">
+            <h3>
+                이 페이지는 개인적으로 웹페이지 개발 연습을 위해 만들어진 페이지 입니다.<br>
+                볼품없는 이 페이지를 방문해주셔서 감사합니다.
+            </h3>
+        </span>
+        <span class="blank"></span>
     </div>
 </body>
 </html>
