--- a/about.html
+++ b/about.html
@@ -10,10 +10,10 @@
 <body>
     <div class="head">
         <span class="content">
-            <h3 style="line-height: 150%;">
+            <p style="line-height: 150%;">
                 이 페이지는 개인적으로<br>웹페이지 개발 연습을 위해 만들어진 페이지 입니다.<br>
                 볼품없는 이 페이지를 방문해주셔서 감사합니다.
-            </h3>
+            </p>
         </span>
         <span class="blank"></span>
     </div>
