--- a/about.html
+++ b/about.html
@@ -14,6 +14,9 @@
                 이 페이지는 개인적으로<br>웹페이지 개발 연습을 위해 만들어진 페이지입니다.<br>
                 볼품없는 이 페이지를 방문해주셔서 감사합니다.
             </p>
+            <p>
+                <a href="index.html">BACK</a> 
+            </p>
         </span>
         <span class="blank"></span>
     </div>
