--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
                 볼품없는 이 페이지를 방문해주셔서 감사합니다.
             </p>
             <p>
-                <a href="index.html">BACK</a> 
+                <a href="index.html">Back to Main</a> 
             </p>
         </span>
         <span class="blank"></span>
