백그라운드 추가

--- a/background.html
+++ b/background.html
@@ -10,16 +10,13 @@
 <body>
     <div class="head">
         <span class="content">
-            <h1 style="font-weight: 800; margin-bottom: 15%;">Practice Page</h1>
+            <h1 style="font-weight: 800; margin-bottom: 15%;">
+                이 페이지는<br>다양한 배경 연습을 위한 페이지입니다.<br>
+            </h1>
             <h3 style="line-height: 150%;">
                 <div class="list">
-                    <a href="about.html">- About Page</a><br>
-                    <a href="background.html">- P1_background</a><br>
-                    - P2_font<br>
-                    - P3_button<br>
-                    - P4_image<br>
-                    - P5_animation<br>
-                    - P6_function
+                    <a href="bg1.html">- Backgroud_1</a><br>
+                    <a href="bg2.html">- Backgroud_2</a><br>
                 </div>
             </h3>
         </span>
