--- a/background.html
+++ b/background.html
@@ -10,7 +10,7 @@
 <body>
     <div class="head">
         <span class="content">
-            <p>
+            <p style="line-height: 150%;">
                 이 페이지는<br>다양한 배경 연습을 위한 페이지입니다.<br>
             </p>
             <h3 style="line-height: 150%;">
