--- a/background.html
+++ b/background.html
@@ -14,11 +14,14 @@
                 이 페이지는<br>다양한 배경 연습을 위한 페이지입니다.<br>
             </p>
             <h3 style="line-height: 150%;">
-                <div class="list" slyle="text-aline= center;">
+                <div slyle="text-aline= center;">
                     <a href="bg1.html">- Backgroud_1</a><br>
                     <a href="bg2.html">- Backgroud_2</a><br>
                 </div>
             </h3>
+            <p>
+                <a href="index.html">Back to Main</a> 
+            </p>
         </span>
         <span class="blank"></span>
     </div>
