--- a/background.html
+++ b/background.html
@@ -19,7 +19,7 @@
                     <a href="bg2.html">- Backgroud_2</a><br>
                 </div>
             </h3>
-            <p>
+            <p style="margin-top: 30%;">
                 <a href="index.html">Back to Main</a> 
             </p>
         </span>
