--- a/background.html
+++ b/background.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GB_Practice1</title>
     <link rel="stylesheet" href="main.css">
-    <script src="main.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script>
+        $(function(){
+            $("Background").click(function(){$(this).css("background","coral")})
+        })
+    </script>
 </head>
 <body>
     <div class="head">
@@ -15,8 +20,8 @@
             </p>
             <h3 style="line-height: 150%;">
                 <div slyle="text-aline= center;">
-                    <a href="bg1.html">- Backgroud_1</a><br>
-                    <a href="bg2.html">- Backgroud_2</a><br>
+                    <button>Background_1</button><br>
+                    <button>Background_2</button>
                 </div>
             </h3>
             <p style="margin-top: 30%;">
