--- a/background.html
+++ b/background.html
@@ -2,15 +2,16 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GB_Practice1</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script>
-        $(function(){
-            $("Background").click(function(){$(this).css("background","coral")})
-        })
-    </script>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="main.js"></script>
+    <title>GB_Practice1</title>
 </head>
 <body>
     <div class="head">
@@ -20,8 +21,7 @@
             </p>
             <h3 style="line-height: 150%;">
                 <div slyle="text-aline= center;">
-                    <button>Background_1</button><br>
-                    <button>Background_2</button>
+                    <input type="button" value="Background_1" onclick="start()"/>
                 </div>
             </h3>
             <p style="margin-top: 30%;">
