--- a/background.html
+++ b/background.html
@@ -16,17 +16,20 @@
 <body>
     <div class="head">
         <span class="content">
-            <p style="line-height: 150%;">
+            <p>
                 이 페이지는<br>다양한 배경 연습을 위한 페이지입니다.<br>
             </p>
-            <h3 style="line-height: 150%;">
+            <h3>
                 <div slyle="text-aline= center;">
                     <input type="button" value="Background_1" onclick="start()"/>
                 </div>
             </h3>
-            <p style="margin-top: 30%;">
-                <a href="index.html">Back to Main</a> 
+            <p>
+                <a href="background.html">[Reset]</a> 
             </p>
+            <div class="backtomain">
+                <a href="index.html">Back to Main</a> 
+            </div>
         </span>
         <span class="blank"></span>
     </div>
