--- a/about.html
+++ b/about.html
@@ -15,13 +15,13 @@
 <body>
     <div class="head">
         <span class="content">
-            <p style="line-height: 150%;">
+            <p>
                 이 페이지는 개인적으로<br>웹페이지 개발 연습을 위해 만들어진 페이지입니다.<br>
                 볼품없는 이 페이지를 방문해주셔서 감사합니다.
             </p>
-            <p style="margin-top: 30%;">
+            <div class="backtomain">
                 <a href="index.html">Back to Main</a> 
-            </p>
+            </div>
         </span>
         <span class="blank"></span>
     </div>
