--- a/background.html
+++ b/background.html
@@ -21,11 +21,12 @@
             </p>
             <h3>
                 <div slyle="text-aline= center;">
-                    <input type="button" value="Background_1" onclick="start()"/>
+                    <input type="button" value="Background_1" onclick="start1()"/><br>
+                    <input type="button" value="Background_2" onclick="start2()"/><br>
                 </div>
             </h3>
             <p>
-                <a href="background.html">[Reset]</a> 
+                <a href="background.html">[Reset Background]</a> 
             </p>
             <div class="backtomain">
                 <a href="index.html">Back to Main</a> 
