--- a/background.html
+++ b/background.html
@@ -9,6 +9,7 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="main.js"></script>
     <title>GB_Practice1</title>
@@ -23,6 +24,7 @@
                 <div slyle="text-aline= center;">
                     <input type="button" value="Background_1" onclick="start1()"/><br>
                     <input type="button" value="Background_2" onclick="start2()"/><br>
+                    <input type="button" value="Background_3" onclick="start3()"/><br>
                 </div>
             </h3>
             <p>
