--- a/background.html
+++ b/background.html
@@ -12,6 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="main.js"></script>
+    <script src="gradient.js"></script>
     <title>GB_Practice1</title>
 </head>
 <body>
@@ -36,5 +37,6 @@
         </span>
         <span class="blank"></span>
     </div>
+    <div id="gradient"/>
 </body>
 </html>
